<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ActivityExamples</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="spinner_title">Select Category</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have account? Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="relative_ex">Relative Example</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">29119297558-g90ig8q0jcv88ldrh5vfv0qopfmnsk7a.apps.googleusercontent.com</string>
    <string name="search">Search Country</string>
    <string name="search_hint">Search names</string>
    <string name="flag_description">Country Flag</string>
    <string name="search_settings">Search Country Names</string>


    <!--CheckBox activity-->
    <string name="cb_meats">Meats</string>
    <string name="cb_cheese">Cheese</string>
    <string name="cb_sandwich">Sandwich</string>
    <string name="buttons_example">Button Example</string>


    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum.
     Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus.
      Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum.
      Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus
       et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque
       penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

    <!--Navagation-->
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>

    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>


    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_material_tabs">Material Tabs</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_templete">TempleteActivity</string>
    <string name="title_activity_login_mahesh">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="title_activity_json">JsonActivity</string>
</resources>
