<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahesha.widgets.CheckBoxActivity">

    <CheckBox
        android:id="@+id/checkbox_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/cb_meats" />

    <CheckBox
        android:id="@+id/checkbox_cheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_meat"
        android:onClick="onCheckboxClicked"
        android:text="@string/cb_cheese" />

    <CheckBox
        android:id="@+id/checkbox_sandwich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_cheese" />

    <TextView
        android:id="@+id/tv_sw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_sandwich"
        android:layout_below="@+id/checkbox_cheese"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/checkbox_sandwich"
        android:text="@string/cb_sandwich" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkbox_meat"
        android:layout_below="@+id/checkbox_sandwich"
        android:textSize="@dimen/content_te_sizes"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="42dp"
        android:text="TextView" />

</RelativeLayout>
